# shipd-agent

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run.sh  shipd-rubric.md
.github/workflows/: release.yml
scripts/: shipd.sh
shipd-agent/: __init__.py  browser_session.py  orchestrator.py  review_agent.py  session_stats.py  shipd_submit.py  time_logs.py
shipd-agent/auth/: __init__.py  auth.py
shipd-agent/browser/: __init__.py  session.py
shipd-agent/review/: __init__.py  activity.py  agent.py  agent_runs_checks.py  config.py  context.py  docker_tests.py  downgrade.py  feedback_format.py  graph.py  loc.py  phase0.py  phases.py  prompts.py  result.py  review_io.py  review_phases.py  rubric_defaults.py  schemas.py  scrape.py  test_loc.py  test_phase0.py  token_budget.py  tools.py
shipd-agent/stats/: __init__.py  session_stats.py  watch_batch.py
shipd-agent/tests/: conftest.py  debug_review.py  debug_submit.py  test_agent_runs_checks.py  test_cleanup.py  test_config.py  test_docker_tests.py  test_feedback_format.py  test_form_scope_browser.py  test_loc.py  test_phases.py  test_result.py  test_review_bundles.py  test_review_clone.py  test_review_guards.py  test_scrape.py  test_session_stats.py  test_submit.py  test_token_budget.py  test_watch_batch.py
shipd-agent/workflow/: __init__.py  cleanup.py  debug_submit.py  orchestrator.py  review.py  submit.py  submit_from_json.py  test_cleanup.py  test_review_flow.py  test_submit.py  time_logs.py
